--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="example.zxing">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".SampleApplication"
@@ -14,43 +17,65 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContinuousCaptureActivity"></activity>
+
         <activity
-            android:name=".AnyOrientationCaptureActivity"
-            android:screenOrientation="fullSensor"
-            android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
-        <activity
-            android:name=".ToolbarCaptureActivity"
+            android:name=".ScanActivity"
             android:clearTaskOnLaunch="true"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/AppCompatCaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="adjustNothing"></activity>
+
         <activity
-            android:name=".CustomScannerActivity"
-            android:screenOrientation="fullSensor"
+            android:name=".HistoryActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:theme="@style/AppCompatCaptureTheme"
+            android:windowSoftInputMode="adjustNothing"></activity>
+
         <activity
-            android:name=".SmallCaptureActivity"
-            android:screenOrientation="fullSensor"
+            android:name=".FavoriteActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:theme="@style/AppCompatCaptureTheme"
+            android:windowSoftInputMode="adjustNothing"></activity>
         <activity
-            android:name=".TabbedScanning"
-            android:theme="@style/Theme.AppCompat"
-            android:label="@string/title_activity_tabbed_scanning"></activity>
+            android:name=".MoreActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/AppCompatCaptureTheme"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity
+            android:name=".DetailActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/AppCompatCaptureTheme"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity
+            android:name=".MoreDetailActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/AppCompatCaptureTheme"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity
+            android:name=".LanguageActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/AppCompatCaptureTheme"
+            android:windowSoftInputMode="adjustNothing"></activity>
     </application>
 
 </manifest>
